# moodle-checker

./: .gitignore  LICENSE  README.md  pyproject.toml
moodle_checker/: moodle_checker.py
